2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/fr.po: Harmonize name of parameters.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS: Indicate which tools support TCB.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwck.c: Unlock the password and shadow files when there is a
	failure to prepare the update in memory.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwck.c: Only log to SYSLOG when acting on system files.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwck.c: Document the sections closed by #endif
	* src/pwck.c, man/pwck.8.xml: No alternative shadow file can be
	given when USE_TCB is enabled.
	* src/pwck.c: Remove the -s option from the usage when USE_TCB is
	enabled. The option is still supported, but has no effect, as
	documented in the manpage.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwck.c: Do not use pwd_file and spw_file. Always use the
	dbname() functions.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwck.c: Re-indent.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/userdel.c, src/usermod.c, src/vipw.c, src/useradd.c,
	src/pwck.c, src/chage.c, lib/shadowio.c: Explicitly use the
	SHADOWTCB_FAILURE return code instead of 0 or implicit conversion
	to booleans.

2010-03-18  Paweł Hajdan, Jr.  <phajdan.jr@gentoo.org>

	* src/pwck.c: Add support for TCB.
	* src/pwck.c: Use spw_dbname() instead of spw_file since TCB
	changes from a file to another depending on the user. Also use
	pw_dbname() for consistency.

2010-03-17  Nicolas François  <nicolas.francois@centraliens.net>

	* src/faillog.c: Re-indent.

2010-03-17  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/tcbfuncs.h: Added type shadowtcb_status.
	* lib/tcbfuncs.h, lib/tcbfuncs.c: Return a shadowtcb_status
	instead of an int.